[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
hyper = "1.3"
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
tower = { version = "0.4", features = ["util"] }
